--- a/app/src/main/res/layout/list_item_layout.xml
+++ b/app/src/main/res/layout/list_item_layout.xml
@@ -50,6 +50,7 @@
         app:layout_constraintTop_toBottomOf="@id/taskDueDate" />
 
     <CheckBox
+        android:id = "@+id/checkbox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
