--- a/app/src/main/res/layout/fragment_choose_pet.xml
+++ b/app/src/main/res/layout/fragment_choose_pet.xml
@@ -32,7 +32,7 @@
         android:id="@+id/petChoiceOne"
         android:layout_width="160dp"
         android:layout_height="160dp"
-        android:src="@drawable/cat_pet"
+        android:src="@drawable/ic_pet_placeholder"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,7 +44,7 @@
         android:id="@+id/petChoiceTwo"
         android:layout_width="160dp"
         android:layout_height="160dp"
-        android:src="@drawable/lizard_pet"
+        android:src="@drawable/ic_pet_placeholder"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/petChoiceOne"
@@ -55,7 +55,7 @@
         android:id="@+id/petChoiceThree"
         android:layout_width="160dp"
         android:layout_height="160dp"
-        android:src="@drawable/pikachu_pet"
+        android:src="@drawable/ic_pet_placeholder"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
