--- a/app/src/main/res/layout/fragment_pet.xml
+++ b/app/src/main/res/layout/fragment_pet.xml
@@ -7,15 +7,27 @@
     tools:context=".PetFragment">
 
     <TextView
-        android:id="@+id/petStatus"
+        android:id="@+id/petStatusName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="30sp"
+        app:layout_constraintEnd_toStartOf="@id/petStatusFeeling"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Your pet is:"
+        android:layout_margin="16dp"
+        app:layout_constraintHorizontal_bias="0.99"/>
+    <TextView
+        android:id = "@+id/petStatusFeeling"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize = "30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="Your pet is happy"
-        android:layout_margin="16dp"/>
+        tools:text = "happy"
+        android:layout_margin="16dp"
+        app:layout_constraintHorizontal_bias="0.8"/>
 
     <ImageButton
         android:id="@+id/petImage"
@@ -26,7 +38,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/petStatus" />
+        app:layout_constraintTop_toBottomOf="@id/petStatusName" />
 
     <Button
         android:id="@+id/to_do_list_fragment"
