--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AddFragment">
+    tools:context=".AddFragment"
+    android:background="#4765FF">
 
     <EditText
         android:id="@+id/newTaskName"
@@ -14,7 +15,8 @@
         android:textSize="32sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_margin="16dp"/>
+        android:layout_margin="16dp"
+        android:textColor="#FFFFFF"/>
 
     <Button
         android:id="@+id/addButtonAddFrag"
@@ -23,7 +25,7 @@
         android:layout_margin="30dp"
         android:textColor="#000000"
         android:text="@string/add_button_text"
-        app:backgroundTint="#5F92DF"
+        app:backgroundTint="#BCFFC3"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
