--- a/app/src/main/res/layout/fragment_pet.xml
+++ b/app/src/main/res/layout/fragment_pet.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PetFragment">
+    tools:context=".PetFragment"
+    android:background="#4765FF">
 
     <TextView
         android:id="@+id/petStatusName"
@@ -16,7 +17,8 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Your pet is:"
         android:layout_margin="16dp"
-        app:layout_constraintHorizontal_bias="0.99"/>
+        app:layout_constraintHorizontal_bias="0.99"
+        android:textColor="#FFFFFF"/>
     <TextView
         android:id = "@+id/petStatusFeeling"
         android:layout_width="wrap_content"
@@ -27,7 +29,8 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:text = "happy"
         android:layout_margin="16dp"
-        app:layout_constraintHorizontal_bias="0.8"/>
+        app:layout_constraintHorizontal_bias="0.8"
+        android:textColor="#FFFFFF"/>
 
     <ImageButton
         android:id="@+id/petImage"
@@ -38,12 +41,15 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/petStatusName" />
+        app:layout_constraintTop_toBottomOf="@id/petStatusName"
+        android:scaleType="centerCrop"/>
 
     <Button
         android:id="@+id/to_do_list_fragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="#708150"
+        android:textColor="#000000"
         android:text="@string/to_tasks_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
