--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -18,6 +18,29 @@
         android:layout_margin="16dp"
         android:textColor="#FFFFFF"/>
 
+    <TextView
+        android:id="@+id/newTaskDueDateOne"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/task_due_by"
+        android:textSize="32sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/newTaskName"
+        android:layout_margin="16dp"
+        android:textColor="#FFFFFF"/>
+
+    <EditText
+        android:id="@+id/newTaskDueDateTwo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="@string/task_due_by_edit"
+        android:textSize="32sp"
+        app:layout_constraintStart_toEndOf="@id/newTaskDueDateOne"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBaseline_toBaselineOf="@id/newTaskDueDateOne"
+        android:layout_margin="16dp"
+        android:textColor="#FFFFFF"/>
+
     <Button
         android:id="@+id/addButtonAddFrag"
         android:layout_width="wrap_content"
