--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -30,12 +30,36 @@
         android:textColor="#FFFFFF"/>
 
     <EditText
-        android:id="@+id/newTaskDueDateTwo"
+        android:id="@+id/newTaskMonth"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="@string/task_due_by_edit"
+        android:hint="@string/edit_due_date_month"
         android:textSize="32sp"
         app:layout_constraintStart_toEndOf="@id/newTaskDueDateOne"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBaseline_toBaselineOf="@id/newTaskDueDateOne"
+        android:layout_margin="16dp"
+        android:textColor="#FFFFFF"/>
+
+    <TextView
+        android:id="@+id/slash"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="@string/due_date_slash"
+        android:textSize="32sp"
+        app:layout_constraintStart_toEndOf="@id/newTaskMonth"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBaseline_toBaselineOf="@id/newTaskDueDateOne"
+        android:layout_margin="16dp"
+        android:textColor="#FFFFFF"/>
+
+    <EditText
+        android:id="@+id/newTaskDay"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="@string/edit_due_date_day"
+        android:textSize="32sp"
+        app:layout_constraintStart_toEndOf="@id/slash"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBaseline_toBaselineOf="@id/newTaskDueDateOne"
         android:layout_margin="16dp"
