--- a/app/src/main/res/layout-land/fragment_pet.xml
+++ b/app/src/main/res/layout-land/fragment_pet.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#89BDFB"
-    tools:context=".PetFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="#89BDFB">
 
     <TextView
         android:id="@+id/welcome_message"
@@ -15,7 +14,7 @@
         android:gravity="center"
         android:text="@string/welcome_message"
         android:textColor="#0B5C42"
-        android:textSize="25sp"
+        android:textSize="30sp"
         app:fontFamily="@font/acme"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -27,14 +26,14 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:textColor="#1B00FF"
-        android:textSize="30sp"
+        android:textSize="35sp"
         app:fontFamily="@font/bevan"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/petStatusFeeling"
-        app:layout_constraintHorizontal_bias="0.99"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.08"
+        app:layout_constraintVertical_bias="0.25"
         tools:text="Your pet is:" />
 
     <TextView
@@ -43,14 +42,14 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:textColor="#1B00FF"
-        android:textSize="30sp"
+        android:textSize="35sp"
         app:fontFamily="@font/bevan"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.885"
+        app:layout_constraintHorizontal_bias="0.15"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.08"
+        app:layout_constraintVertical_bias="0.4"
         tools:text="happy" />
 
 
@@ -85,11 +84,11 @@
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="20dp"
         android:textColor="#1B00FF"
-        android:textSize="22sp"
+        android:textSize="27sp"
         app:fontFamily="@font/share_tech"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.57"
+        app:layout_constraintHorizontal_bias="0.1"
         app:layout_constraintStart_toStartOf="parent"
         tools:text="Mon, January 1 12:00 AM" />
 
